// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> BodyLarge story renders snapshot 1`] = `
<div
  class="m-spacing-size-2"
>
  <p
    class="text text--body-lg"
  >
    Body large
  </p>
</div>
`;

exports[`<Text /> BodyMedium story renders snapshot 1`] = `
<div
  class="m-spacing-size-2"
>
  <p
    class="text text--body-md"
  >
    Body medium
  </p>
</div>
`;

exports[`<Text /> BodySmall story renders snapshot 1`] = `
<div
  class="m-spacing-size-2"
>
  <p
    class="text text--body-sm"
  >
    Body small
  </p>
</div>
`;

exports[`<Text /> BodyXLarge story renders snapshot 1`] = `
<div
  class="m-spacing-size-2"
>
  <p
    class="text text--body-xl"
  >
    Body extra-large
  </p>
</div>
`;

exports[`<Text /> BodyXSmall story renders snapshot 1`] = `
<div
  class="m-spacing-size-2"
>
  <p
    class="text text--body-xs"
  >
    Body Xsmall
  </p>
</div>
`;

exports[`<Text /> CaptionMedium story renders snapshot 1`] = `
<div
  class="m-spacing-size-2"
>
  <p
    class="text text--caption-md"
  >
    Caption medium
  </p>
</div>
`;

exports[`<Text /> CodePresets story renders snapshot 1`] = `
<div
  class="m-spacing-size-2"
>
  <div>
    <p
      class="text text--code-xl"
    >
      Code Extra Large
    </p>
    <p
      class="text text--code-lg"
    >
      Code Large
    </p>
    <p
      class="text text--code-md"
    >
      Code Medium
    </p>
    <p
      class="text text--code-sm"
    >
      Code Small
    </p>
    <p
      class="text text--code-xs"
    >
      Code Extra Small
    </p>
  </div>
</div>
`;

exports[`<Text /> DecorativePresetCombination story renders snapshot 1`] = `
<div
  class="m-spacing-size-2"
>
  <div>
    <span
      class="text text--headline-lg"
    >
      Product
    </span>
    <span
      class="text text--headline-decorative-inline-lg"
    >
      Name
    </span>
  </div>
</div>
`;

exports[`<Text /> DecorativePresets story renders snapshot 1`] = `
<div
  class="m-spacing-size-2"
>
  <div>
    <p
      class="text text--headline-decorative-inline-xl"
    >
      Headline Decorative Inline XLarge
    </p>
    <p
      class="text text--headline-decorative-inline-lg"
    >
      Headline Decorative Inline Large
    </p>
    <p
      class="text text--headline-decorative-inline-md"
    >
      Headline Decorative Inline Medium
    </p>
    <p
      class="text text--headline-decorative-inline-sm"
    >
      Headline Decorative Inline Small
    </p>
  </div>
</div>
`;

exports[`<Text /> Default story renders snapshot 1`] = `
<div
  class="m-spacing-size-2"
>
  <p
    class="text text--body-md"
  >
    Default &lt;Text /&gt; rendering
  </p>
</div>
`;

exports[`<Text /> LabelXLarge story renders snapshot 1`] = `
<div
  class="m-spacing-size-2"
>
  <p
    class="text text--label-xl"
  >
    Label extra-large
  </p>
</div>
`;

exports[`<Text /> OverridingFontFamily story renders snapshot 1`] = `
<div
  class="m-spacing-size-2"
>
  <p
    class="text text--body-md !font-2"
  >
    You can use utility classes to override the font family used for a given size
  </p>
</div>
`;

exports[`<Text /> TitleXLarge story renders snapshot 1`] = `
<div
  class="m-spacing-size-2"
>
  <p
    class="text text--title-xl"
  >
    Title extra-large
  </p>
</div>
`;

exports[`<Text /> UsingColorTokens story renders snapshot 1`] = `
<div
  class="m-spacing-size-2"
>
  <div>
    <p
      class="text text--body-xl text-utility-warning"
    >
      using 
      <code>
        text-utility-warning
      </code>
       utility class
    </p>
    <p
      class="text text--body-lg text-utility-favorable"
    >
      using 
      <code>
        text-utility-favorable
      </code>
       utility class
    </p>
    <p
      class="text text--body-md text-utility-critical"
    >
      using 
      <code>
        text-utility-critical
      </code>
       utility class
    </p>
  </div>
</div>
`;
